Update: proportional gradient rendering fix; selectable GPU backend (Application.setGpuBackend + -Dprism.skia.gpu.backend, AUTO default, graceful fallback, truthful backend log); WebView dialog-suspend fix; gradient demo + backend-selection docs.
Snapshot from the development repo.